# anproxy

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  anproxy.example.toml
admin-ui/: index.html  package-lock.json  package.json
admin-ui/src/: App.tsx  api.ts  index.css
admin-ui/src/components/: BottomTabs.tsx  CircleTimer.tsx  DataTable.tsx  Modal.tsx  Sidebar.tsx  StatsCard.tsx  Toast.tsx  ToastContainer.tsx
admin-ui/src/hooks/: useToast.ts
admin-ui/src/pages/: Certs.tsx  Dashboard.tsx  Login.tsx  SpeedTest.tsx  StaticDirs.tsx  System.tsx  Targets.tsx
admin-ui/src/store/: authSlice.ts  certsSlice.ts  index.ts  speedTestSlice.ts  staticDirsSlice.ts  statsSlice.ts  targetsSlice.ts
docs/superpowers/plans/: 2026-03-25-management-service.md
docs/superpowers/specs/: 2026-03-25-management-service-design.md
src/: cli.rs  example.rs  log_buffer.rs  main.rs  stats.rs  system_metrics.rs
src/admin/: api_certs.rs  api_speed_test.rs  api_static_dirs.rs  api_stats.rs  api_system.rs  api_targets.rs  assets.rs  auth.rs  mod.rs  persist.rs  response.rs  router.rs  server.rs
src/config/: loader.rs  mod.rs  parse.rs  types.rs
src/proxy/: handler.rs  mod.rs  server.rs  static_handler.rs
src/tls/: cert.rs  mod.rs  test_helpers.rs  watcher.rs
