[package]
name = "anproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
rustls = "0.23.36"
tokio-rustls = "0.26.4"
argh = "0.1.14"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
httpdate = "1"
serde_json = "1"
rust-embed = "8"
dashmap = "6"
rand = "0.8"
x509-parser = "0.16"

[dev-dependencies]
rcgen = "0.14"
tempfile = "3"